--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,12 @@ jobs:
       - name: Run sanity tests spectrum_virtualize
         run: ansible-test sanity --docker -v --color
         working-directory: ansible_collections/ibm/spectrum_virtualize
-                        
+     
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f tests/unit/requirements.txt ]; then pip install -r tests/unit/requirements.txt; fi
+
       # Run the unit tests
       - name: Run unit test
         run: ansible-test units --docker -v --color --requirements --python 2.7
