--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Install ansible (${{ matrix.ansible }})
         run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Make directory for ansible-test 
         run: |
           pwd
@@ -39,11 +44,6 @@ jobs:
         run: ansible-test sanity --docker -v --color
         working-directory: ansible_collections/ibm/spectrum_virtualize
      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f tests/unit/requirements.txt ]; then pip install -r tests/unit/requirements.txt; fi
-
       # Run the unit tests
       - name: Run unit test
         run: ansible-test units --docker -v --color --requirements --python 2.7
