--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
      
       # Run the unit tests
       - name: Run unit test
-        run: ansible-test units --docker -v --color --requirements --python 2.7
+        run: ansible-test units -v --color --requirements --python 2.7
         working-directory: ansible_collections/ibm/spectrum_virtualize
         
   #units:
